add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,16 @@
     <meta name="description" content="Product (UX/UI) Designer" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174212457-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-174212457-1');
+    </script>
+
     <title>Luciana Reyes</title>
   </head>
   <body>
