Fix logo. Add clickable area to whole card

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Product (UX/UI) Designer" />
+    <meta name="description" content="Product Designer based in Berlin - infinitely curious
+    about people's needs and passionate about creating delightful and
+    human experiences." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -18,7 +20,7 @@
       gtag('config', 'UA-174212457-1');
     </script>
 
-    <title>Luciana Reyes</title>
+    <title>Luciana Reyes - Product (UX/UI) Designer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
